; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/jscript/extr_compile.c_emit_identifier.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/jscript/extr_compile.c_emit_identifier.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@OP_local = common dso_local global i32 0, align 4
@OP_ident = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32*)* @emit_identifier to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @emit_identifier(i32* %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  %7 = load i32*, i32** %4, align 8
  %8 = load i32*, i32** %5, align 8
  %9 = call i64 @bind_local(i32* %7, i32* %8, i32* %6)
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %16

11:                                               ; preds = %2
  %12 = load i32*, i32** %4, align 8
  %13 = load i32, i32* @OP_local, align 4
  %14 = load i32, i32* %6, align 4
  %15 = call i32 @push_instr_int(i32* %12, i32 %13, i32 %14)
  store i32 %15, i32* %3, align 4
  br label %21

16:                                               ; preds = %2
  %17 = load i32*, i32** %4, align 8
  %18 = load i32, i32* @OP_ident, align 4
  %19 = load i32*, i32** %5, align 8
  %20 = call i32 @push_instr_bstr(i32* %17, i32 %18, i32* %19)
  store i32 %20, i32* %3, align 4
  br label %21

21:                                               ; preds = %16, %11
  %22 = load i32, i32* %3, align 4
  ret i32 %22
}

declare dso_local i64 @bind_local(i32*, i32*, i32*) #1

declare dso_local i32 @push_instr_int(i32*, i32, i32) #1

declare dso_local i32 @push_instr_bstr(i32*, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
